Add travis config and prepare package to be published on npm

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "elyby"
     ],
     "license": "MIT",
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "build": "babel src -d lib --extensions .ts,.js",
         "test": "jest"
