--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   - provider: npm
     skip_cleanup: true
     email: $NPM_USER_EMAIL
-    api_key: $NPM_API_KEY
+    api_key: $NPM_AUTH_TOKEN
     on:
       tags: true
