--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     },
     "scripts": {
         "build": "babel src -d lib --extensions .ts,.js",
-        "test": "jest"
+        "test": "jest",
+        "lint": "eslint \"{src,tests}/**/*.{js,ts}\""
     },
     "dependencies": {
         "@typescript-eslint/eslint-plugin": "^1.9.0",
@@ -34,6 +35,7 @@
         "@babel/core": "^7.4.5",
         "@babel/preset-env": "^7.4.4",
         "@babel/preset-typescript": "^7.3.3",
+        "@elyby/eslint-plugin": "^0.1.0",
         "@types/eslint": "^4.16.6",
         "@types/estree": "^0.0.39",
         "@types/node": "^12.0.2",
