--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "lint": "eslint \"{src,tests}/**/*.{js,ts}\""
     },
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^1.9.0",
+        "@typescript-eslint/eslint-plugin": "^1.9.1-alpha.12",
         "@typescript-eslint/parser": "^1.9.0",
-        "eslint-plugin-react": "^7.13.0"
+        "eslint-plugin-react": "^7.13.0",
+        "eslint-plugin-react-hooks": "^1.6.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.4.4",
