--- a/package.json
+++ b/package.json
@@ -25,12 +25,6 @@
         "test": "jest",
         "lint": "eslint \"{src,tests}/**/*.{js,ts}\""
     },
-    "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^1.9.1-alpha.12",
-        "@typescript-eslint/parser": "^1.9.0",
-        "eslint-plugin-react": "^7.13.0",
-        "eslint-plugin-react-hooks": "^1.6.0"
-    },
     "devDependencies": {
         "@babel/cli": "^7.4.4",
         "@babel/core": "^7.4.5",
@@ -45,6 +39,10 @@
         "typescript": "^3.4.5"
     },
     "peerDependencies": {
-        "eslint": ">=5.16.0"
+        "@typescript-eslint/eslint-plugin": "^1.9.1-alpha.12",
+        "@typescript-eslint/parser": "^1.9.0",
+        "eslint": ">=5.16.0",
+        "eslint-plugin-react": "^7.13.0",
+        "eslint-plugin-react-hooks": "^1.6.0"
     }
 }
