--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@babel/core": "^7.4.5",
         "@babel/preset-env": "^7.4.4",
         "@babel/preset-typescript": "^7.3.3",
-        "@elyby/eslint-plugin": "^0.1.0",
+        "@elyby/eslint-plugin": "^0.2.0",
         "@types/eslint": "^4.16.6",
         "@types/estree": "^0.0.39",
         "@types/node": "^12.0.2",
@@ -39,10 +39,10 @@
         "typescript": "^3.4.5"
     },
     "peerDependencies": {
-        "@typescript-eslint/eslint-plugin": "^1.9.1-alpha.12",
-        "@typescript-eslint/parser": "^1.9.0",
-        "eslint": ">=5.16.0",
+        "@typescript-eslint/eslint-plugin": "^2.11.0",
+        "@typescript-eslint/parser": "^2.11.0",
+        "eslint": "^6.0.0",
         "eslint-plugin-react": "^7.13.0",
-        "eslint-plugin-react-hooks": "^1.6.0"
+        "eslint-plugin-react-hooks": "^1.6.0 | ^2.0.0"
     }
 }
