--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
         "@babel/preset-typescript": "^7.3.3",
         "@elyby/eslint-plugin": "^0.2.0",
         "@types/eslint": "^4.16.6",
-        "@types/estree": "^0.0.39",
+        "@types/estree": "^0.0.40",
         "@types/node": "^12.0.2",
+        "@typescript-eslint/eslint-plugin": "^1.9.1",
+        "@typescript-eslint/parser": "^1.9.0",
         "eslint": "^5.16.0",
         "jest": "^24.8.0",
         "typescript": "^3.4.5"
